--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,12 +16,10 @@ body {
 .hello > h1 {
   font-size: 108px;
   font-weight: 600;
-}
-.hello > h1:hover #photo {
-  display: '';
+  width: fit-content;
 }
 
-.hello > img {
+#photo {
   /* display: none; */
   width: 230px;
   height: 230px;
@@ -71,11 +69,33 @@ body {
 }
 
 .works-link > a {
-  font-size: 31px;
+  font-size: 27px;
   font-weight: 600; 
   color: inherit;
 }
 
+.work {
+  margin: 200px 0 400px 0; 
+  padding: 0 0 0 45px;
+}
+
+.work-name {
+  font-size: 85px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.work-name {
+  width: fit-content;
+}
+
+.work-description > h4 {
+  font-size: 45px;
+  font-weight: 500;
+  margin: 20px 400px 0 0;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
 
 
 
