--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,7 +76,7 @@ body {
 }
 
 .work {
-  margin: 200px 0 400px 0; 
+  margin: 197px 0 400px 0; 
   padding: 0 0 0 45px;
 }
 
@@ -98,6 +98,31 @@ body {
   margin-bottom: 30px;
 }
 
+.works-body {
+  display: flex;
+  flex-direction: row;
+}
+
+.back {
+  background: black;
+  width: 80px;
+  writing-mode: vertical-lr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.back > a {
+  text-decoration: none;
+  color: #55ffbd;
+  font-size: 30px;
+  font-weight: 600;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 3;
+}
 
 
 
