--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,6 +5,9 @@ body {
   /* opacity: 0.2; */
   background-size: 1250px;
   background-repeat: no-repeat;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -18,6 +21,7 @@ body {
   font-size: 108px;
   font-weight: 600;
   width: fit-content;
+  cursor: default;
 }
 
 #photo {
@@ -136,7 +140,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .backname {
   writing-mode: vertical-lr;
