--- a/assets/styles.css
+++ b/assets/styles.css
@@ -150,7 +150,7 @@ body {
   font-size: 17px;
 }
 
-.project1, .project2, .project3 {
+.project1, .project2, .project3, .project4 {
   opacity: 0;
 }
 
@@ -293,4 +293,12 @@ body {
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   animation-delay: 0.6s, 0.6s;
+}
+
+.project4 {
+  animation: movemove 1.2s,
+            transition 1.2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-delay: 0.9s, 0.9s;
 }
