--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 900px) {
+  .about > h2 {font-size: 60px !important;;}
+  .hello > h1 {font-size: 130px;}
+  .links { display: flex; flex-direction: column; }
+  .links > span {font-size: 80px !important;;}
+  .works-link {margin-bottom: 140px;}
+  .works-link > a {font-size: 80px !important;}
+  .back {width: 130px; font-size: 50px;}
+  .work {margin: 197px 0 400px 130px;}
+  .work-description > h4 {margin: 20px 100px 0 0;}
+  .arrow {font-size: 45px;}
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #55ffbd;
@@ -108,7 +121,8 @@ body {
 .work-description > h4 {
   font-size: 45px;
   font-weight: 500;
-  margin: 20px 400px 0 0;
+  margin: 20px 0 0 0;
+  max-width: 800px;
   line-height: 1.3;
   margin-bottom: 30px;
   cursor: default;
@@ -301,14 +315,4 @@ body {
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   animation-delay: 0.9s, 0.9s;
-}
-
-
-@media only screen and (min-width: 768px) {
-  .about > h2 {font-size: 60px;}
-  .hello > h1 {font-size: 130px;}
-  .links { display: flex; flex-direction: column; }
-  .links > span {font-size: 80px;}
-  .works-link {margin-bottom: 140px;}
-  .works-link > a {font-size: 80px;}
 }
