--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,14 +1,17 @@
-@media only screen and (max-width: 900px) and (-webkit-min-device-pixel-ratio:0) {
-  .about > h2 {font-size: 40px !important;;}
-  .hello > h1 {font-size: 130px;}
-  .links { display: flex; flex-direction: column; }
-  .links > span {font-size: 45px !important;;}
-  .works-link {margin-bottom: 140px;}
-  .works-link > a {font-size: 50px !important;}
+@media only screen and (max-width: 900px)  {
+  .hello {margin: 170px 0 0 40px !important}
+  .hello > h1 {font-size: 60px !important; font-weight: 700 !important; color: white !important;}
+  #photo {width: 170px !important; height: 170px !important; left: 130px !important; display: block !important;}
+  .about > h2 {font-size: 23px !important;}
+  .links { display: flex; flex-direction: column; margin: 95px 0 0 45px !important;}
+  .links > span {font-size: 27px !important;}
+  .works-link {margin: 40px 0 40px 45px !important;}
+  .works-link > a {font-size: 27px !important;}
   .back {width: 130px; font-size: 50px;}
-  .work {margin: 197px 0 400px 130px;}
-  .work-description > h4 {margin: 20px 100px 0 0;}
+  .work {padding: 0 0 0 25px !important;}
+  .work-description > h4 {margin: 20px 20px 0 0 !important; font-size: 20px !important; }
   .arrow {font-size: 45px;}
+  .work-name {font-size: 35px !important; margin-bottom: 35px !important;}
 }
 
 body {
