--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,19 +1,3 @@
-@media only screen and (max-width: 900px)  {
-  .hello {margin: 170px 0 0 40px !important}
-  .hello > h1 {font-size: 60px !important; font-weight: 700 !important; color: white !important;}
-  #photo {width: 170px !important; height: 170px !important; left: 130px !important; display: block !important;}
-  .about > h2 {font-size: 23px !important;}
-  .links { display: flex; flex-direction: column; margin: 95px 0 0 45px !important;}
-  .links > span {font-size: 27px !important;}
-  .works-link {margin: 40px 0 40px 45px !important;}
-  .works-link > a {font-size: 27px !important;}
-  .back {width: 130px; font-size: 50px;}
-  .work {padding: 0 0 0 25px !important;}
-  .work-description > h4 {margin: 20px 20px 0 0 !important; font-size: 20px !important; }
-  .arrow {font-size: 45px;}
-  .work-name {font-size: 35px !important; margin-bottom: 35px !important;}
-}
-
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #55ffbd;
@@ -41,6 +25,7 @@ body {
 }
 
 #photo {
+  /* display: none; */
   width: 230px;
   height: 230px;
   position: absolute;
@@ -52,7 +37,7 @@ body {
 
 .about {
   margin: 31px 31px 0 45px;
-  max-width: 800px;
+  width: 800px;
   opacity: 0;
 }
 
@@ -66,17 +51,19 @@ body {
 .links {
   margin: 83px 0 0 45px;
   opacity: 0;
-  line-height: 1.5;
 }
 
 .links > span {
   font-size: 33px;
   font-weight: 600;
-  margin-right: 35px;
 }
 
 .links > span > a {
   color: inherit;
+}
+
+.links > span:nth-child(1n+2) {
+  margin-left: 35px;
 }
 
 .links > span > a:hover, .project-links > a:hover {
@@ -123,8 +110,7 @@ body {
 .work-description > h4 {
   font-size: 45px;
   font-weight: 500;
-  margin: 20px 0 0 0;
-  max-width: 800px;
+  margin: 20px 400px 0 0;
   line-height: 1.3;
   margin-bottom: 30px;
   cursor: default;
@@ -166,7 +152,7 @@ body {
   font-size: 17px;
 }
 
-.project1, .project2, .project3, .project4 {
+.project1, .project2, .project3 {
   opacity: 0;
 }
 
@@ -309,12 +295,4 @@ body {
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   animation-delay: 0.6s, 0.6s;
-}
-
-.project4 {
-  animation: movemove 1.2s,
-            transition 1.2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-delay: 0.9s, 0.9s;
 }
