--- a/assets/styles.css
+++ b/assets/styles.css
@@ -316,3 +316,10 @@ body {
   animation-fill-mode: forwards;
   animation-delay: 0.9s, 0.9s;
 }
+.project5 {
+  animation: movemove 1.2s,
+            transition 1.2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1.2s, 1.2s;
+}
