--- a/assets/styles.css
+++ b/assets/styles.css
@@ -164,7 +164,7 @@ body {
   font-size: 17px;
 }
 
-.project1, .project2, .project3, .project4, .project5 {
+.project1, .project2, .project3, .project4, .project5, .project6 {
   opacity: 0;
 }
 
