--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,40 +22,48 @@ body {
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;
   user-select: none;
+  width: 100vw;
+  height: 100vh;
 }
 
 
 .hello {
-  margin: 197px 0 0 40px;
+  padding: 197px 0 0 40px;
   position: relative;
 }
 
 .hello > h1 {
-  font-size: 108px;
+  font-size: 10vw;
   font-weight: 600;
   width: fit-content;
   cursor: default;
+  color: black;
+  transition: All 0.25s;
+}
+
+.hello > h1:hover{
+  color: white;
 }
 
 #photo {
   /* display: none; */
-  width: 230px;
-  height: 230px;
+  width: 18vw;
+  height: 18vw;
   position: absolute;
   bottom: 15px;
-  left: 285px;
-  border-radius: 150px;
+  left: 28vw;
+  border-radius: 18vw;
   z-index: -2;
 }
 
 .about {
   margin: 31px 31px 0 45px;
-  max-width: 800px;
+  max-width: 71vw;
   opacity: 0;
 }
 
 .about > h2 {
-  font-size: 31px;
+  font-size: 2.8vw;
   font-weight: 800;
   line-height: 1.2;
   cursor: default;
@@ -68,7 +76,7 @@ body {
 }
 
 .links > span {
-  font-size: 33px;
+  font-size: 2.8vw;
   font-weight: 600;
   margin-right: 35px;
 }
@@ -88,7 +96,7 @@ body {
 }
 
 .works-link > a {
-  font-size: 27px;
+  font-size: 2.7vw;
   font-weight: 600;
   color: inherit;
   cursor: pointer;
