--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,8 +22,9 @@ body {
 .hello { height: 35%; position: relative; display: flex; align-items: flex-end;}
 
 .hello > h1 { font-size: 15vh; font-weight: 700; margin: 0 0 -2vh -1vh;z-index: 1;}
+.hello > h1::before {content: attr(data-text); display: block; position: absolute; left: 17px; bottom: -14px; width: 0; color: white;overflow: hidden; transition: all 0.5s;opacity: 0}
 
-.hello > h1:hover{ color: white;}
+.hello > h1:hover::before{ width: 100%; opacity: 1;}
 
 #photo { position: absolute; height: 80%; border-radius: 50%; bottom: 0; left: 40vh;}
 
