--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,7 +15,7 @@ body {
   height: 100vh;
 }
 
-.landing { width: 100%; height: 100%;}
+.landing { width: 100%; height: 100%; max-width: 1000px; margin: 0  auto;}
 
 .hello, .about, .links, .works-link {box-sizing: border-box; padding-left: 20px; opacity: 0}
 
@@ -32,7 +32,7 @@ body {
 
 .about > h2 {font-size: 3.5vh; font-weight: 700; line-height: 1.1;}
 
-.links { height: 20%;}
+.links { height: 20%; line-height: 1.5}
 
 .links > span { margin-right: 40px; font-size: 3vh; font-weight: 700; text-transform: uppercase;display: inline-block; position: relative;}
 
