--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,7 +15,13 @@ body {
   height: 100vh;
 }
 
-.landing { width: 100%; height: 100%; max-width: 1000px; margin: 0  auto;}
+.landing { width: 100%; height: 100%; max-width: 1000px; margin: 0 auto; position: relative;}
+
+.landing .info-box {position: absolute; top: 2rem; right: 2rem;z-index: 10}
+.info-button span {border: 2px solid black; border-radius: 50%; width: 1.5rem; height: 1.5rem;display: block;text-align: center;line-height: 1.6; font-weight: 600; cursor: pointer;}
+.info-box .box {width: 20rem; position: absolute; background: white; display: none;border-radius: 7px;padding: 1rem; border: 1px solid black;font-weight: 500}
+.info-box .box.open {display: block;top: calc(100% + 1rem);right: 0;}
+#picker {width: 100%; display: flex; justify-content: center;margin-top: 1rem}
 
 .hello, .about, .links, .works-link {box-sizing: border-box; padding-left: 20px; opacity: 0}
 
@@ -30,7 +36,7 @@ body {
 
 .about { height: 35%;padding-top: 40px; width: 90%;}
 
-.about > h2 {font-size: 3.5vh; font-weight: 700; line-height: 1.1;}
+.about > h2 {font-size: 3.5vh; font-weight: 700; line-height: 1.2;}
 
 .links { height: 20%; line-height: 1.5}
 
